feat: Complete Sentry integration and database schema sync
- Add Sentry error monitoring and performance tracking
- Implement instrumentation hooks for client and server
- Add observability dashboard components and hooks
- Configure PWA with accessibility features
- Sync database schema with Supabase remote
- Deploy Supabase Edge Functions for monitoring
- Fix migration conflicts and UUID function compatibility
- Update dependencies and build configuration

--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,211 +1,74 @@
 {
   "name": "Versix Norma",
   "short_name": "Norma",
-  "description": "Plataforma de Governança Condominial Inteligente com IA",
+  "description": "Gestão inteligente de condomínios",
   "start_url": "/",
-  "scope": "/",
+  "id": "/",
   "display": "standalone",
-  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
-  "background_color": "#0f3460",
-  "theme_color": "#0f3460",
   "orientation": "portrait-primary",
-  "dir": "ltr",
+  "background_color": "#ffffff",
+  "theme_color": "#4f46e5",
+  "scope": "/",
   "lang": "pt-BR",
-  "categories": ["lifestyle", "utilities", "productivity", "business"],
-  "iarc_rating_id": "",
-  "prefer_related_applications": false,
-
+  "dir": "ltr",
+  "categories": ["lifestyle", "utilities"],
+  
   "icons": [
-    {
-      "src": "/icons/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/maskable-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icons/maskable-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
+    { "src": "/icons/icon-72x72.png", "sizes": "72x72", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-96x96.png", "sizes": "96x96", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-128x128.png", "sizes": "128x128", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-144x144.png", "sizes": "144x144", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-152x152.png", "sizes": "152x152", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-192x192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-384x384.png", "sizes": "384x384", "type": "image/png", "purpose": "maskable any" },
+    { "src": "/icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
   ],
-
+  
   "screenshots": [
-    {
-      "src": "/screenshots/home-light.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Tela inicial com dashboard financeiro"
-    },
-    {
-      "src": "/screenshots/norma-chat.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Chat com Norma IA"
-    },
-    {
-      "src": "/screenshots/transparency.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Transparência financeira"
-    }
+    { "src": "/screenshots/home.png", "sizes": "1280x720", "type": "image/png", "form_factor": "wide", "label": "Dashboard principal" },
+    { "src": "/screenshots/mobile.png", "sizes": "750x1334", "type": "image/png", "form_factor": "narrow", "label": "App móvel" }
   ],
-
+  
   "shortcuts": [
     {
-      "name": "Comunicados",
-      "short_name": "Comunicados",
-      "description": "Ver últimos comunicados do condomínio",
-      "url": "/home?tab=comunicados",
-      "icons": [
-        {
-          "src": "/icons/comunicados.svg",
-          "sizes": "96x96",
-          "type": "image/svg+xml"
-        }
-      ]
+      "name": "SOS - Emergência",
+      "short_name": "SOS",
+      "description": "Acionar emergência",
+      "url": "/sos",
+      "icons": [{ "src": "/icons/sos-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Falar com Norma",
       "short_name": "Norma",
-      "description": "Abrir chat com assistente IA",
-      "url": "/home?chat=norma",
-      "icons": [
-        {
-          "src": "/icons/icon.svg",
-          "sizes": "96x96",
-          "type": "image/svg+xml"
-        }
-      ]
+      "description": "Assistente de IA",
+      "url": "/norma",
+      "icons": [{ "src": "/icons/norma-96x96.png", "sizes": "96x96" }]
     },
     {
-      "name": "SOS Emergência",
-      "short_name": "SOS",
-      "description": "Acionar modo de emergência",
-      "url": "/home?sos=true",
-      "icons": [
-        {
-          "src": "/icons/sos.svg",
-          "sizes": "96x96",
-          "type": "image/svg+xml"
-        }
-      ]
-    },
-    {
-      "name": "Financeiro",
-      "short_name": "Finanças",
-      "description": "Ver transparência financeira",
-      "url": "/home?tab=transparency",
-      "icons": [
-        {
-          "src": "/icons/icon.svg",
-          "sizes": "96x96",
-          "type": "image/svg+xml"
-        }
-      ]
+      "name": "Boleto",
+      "short_name": "Boleto",
+      "description": "Acessar boleto do mês",
+      "url": "/financeiro/boleto",
+      "icons": [{ "src": "/icons/boleto-96x96.png", "sizes": "96x96" }]
     }
   ],
-
+  
   "share_target": {
-    "action": "/home/share",
+    "action": "/share",
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
       "title": "title",
       "text": "text",
       "url": "url",
-      "files": [
-        {
-          "name": "media",
-          "accept": ["image/*", "application/pdf"]
-        }
-      ]
+      "files": [{ "name": "media", "accept": ["image/*", "application/pdf"] }]
     }
   },
-
+  
   "protocol_handlers": [
-    {
-      "protocol": "web+norma",
-      "url": "/home?action=%s"
-    }
+    { "protocol": "web+versixnorma", "url": "/handle?url=%s" }
   ],
-
+  
   "related_applications": [],
-
-  "edge_side_panel": {
-    "preferred_width": 400
-  },
-
-  "handle_links": "preferred",
-
-  "launch_handler": {
-    "client_mode": ["focus-existing", "auto"]
-  },
-
-  "file_handlers": [
-    {
-      "action": "/home/upload",
-      "accept": {
-        "application/pdf": [".pdf"],
-        "image/*": [".jpg", ".jpeg", ".png", ".gif", ".webp"]
-      }
-    }
-  ]
+  "prefer_related_applications": false
 }
