--- a/.env.example
+++ b/.env.example
@@ -48,5 +48,6 @@ NEXT_PUBLIC_APP_ENV=development
 # VERCEL_PROJECT_ID=
 
 # ===== SENTRY (Sprint 10 - Observabilidade) =====
-# SENTRY_DSN=
-# SENTRY_AUTH_TOKEN=
+SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
+NEXT_PUBLIC_SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
+SENTRY_AUTH_TOKEN=
