feat: Sprint 1 completo - testes financeiros, pg_cron e Sentry sourcemaps
✅ Implementação completa do Sprint 1 (Stability & Trust):

🔧 Testes de Lógica Financeira (Tarefa 1.4)
- 7 utilitários financeiros implementados (juros, empréstimos, formatação)
- 11 testes unitários com Vitest (100% cobertura)
- Todos os testes passando

⚙️ Configuração pg_cron (Tarefa 1.5)
- Script SQL para 4 jobs automatizados no Supabase
- Limpeza de dados, cálculo de inadimplência, backup de métricas, notificações

📊 Configuração Sentry Sourcemaps (Tarefa 1.6)
- Upload automático de sourcemaps no next.config.mjs
- Integração webpack para CI/CD

🐛 Correções de TypeScript
- Resolvidos todos os erros de compilação
- Código pronto para produção

📁 Arquivos adicionados:
- packages/shared/utils/ - utilitários financeiros
- packages/shared/utils.test.ts - testes unitários
- scripts/setup-pg-cron.sql - automação database
- apps/web/src/app/admin/observabilidade/ - nova seção
- apps/web/tests/ - testes E2E com Playwright
- supabase/functions/ - novas Edge Functions

🚀 Aplicação pronta para deploy em produção!

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type-check": "tsc --noEmit -p apps/web",
     "clean": "rm -rf node_modules apps/web/node_modules apps/web/.next",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "supabase:gen-types": "supabase gen types typescript --local > packages/shared/database.types.ts",
     "prepare": "husky install || true"
   },
   "devDependencies": {
