--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "critters": "^0.0.25",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.0",
     "idb": "^8.0.0",
