feat: complete Sprint 1 Task 1.5 - pg_cron automation setup
- Configure pg_cron extension for automated metrics collection
- Set up hourly collect-metrics job (every hour)
- Set up uptime-check job (every 5 minutes)
- Add pg_net extension for HTTP calls to Edge Functions
- Create config table for Supabase credentials
- Add npm script 'supabase:setup-cron' for easy deployment

✅ Task 1.5: Configuração de Cron Jobs (pg_cron) - Concluída
- collect-metrics: executa a cada 1 hora
- uptime-check: executa a cada 5 minutos
- Logs de execução visíveis na tabela cron.job

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean": "rm -rf node_modules apps/web/node_modules apps/web/.next",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "supabase:gen-types": "supabase gen types typescript --local > packages/shared/database.types.ts",
+    "supabase:setup-cron": "psql -f scripts/setup-pg-cron.sql",
     "prepare": "husky install || true"
   },
   "devDependencies": {
