feat: Implementar tunelamento e sourcemaps no Sentry (Sprint 1 Task 1.6)
- Criar endpoint /api/sentry-tunnel para evitar bloqueio por AdBlockers
- Configurar upload automático de sourcemaps no CI/CD
- Adicionar script sentry:upload-sourcemaps para upload manual
- Configurar webpack para gerar sourcemaps em produção
- Criar arquivo .sentryclirc com configurações do projeto
- Atualizar workflow GitHub Actions para upload de sourcemaps após build

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -219,6 +219,15 @@ jobs:
             exit 1
           fi
 
+      - name: Upload sourcemaps to Sentry
+        run: |
+          cd apps/web
+          npx @sentry/cli sourcemaps upload .next/server/chunks --release versix-norma@${{ github.sha }} --dist ${{ github.run_number }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: versix-solutions
+          SENTRY_PROJECT: versix-norma
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
