fix(auth): resolve 400 Bad Request error on login
- Improve error message for invalid credentials
- Add script to create test users in Supabase Auth
- Add AUTH_FIX_README.md with setup instructions
- Add npm script 'create-test-users'
- Install required dependencies

The error was caused by missing users in Supabase Auth system.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "supabase:gen-types": "supabase gen types typescript --local > packages/shared/database.types.ts",
     "supabase:setup-cron": "psql -f scripts/setup-pg-cron.sql",
+    "create-test-users": "node scripts/create-test-users.js",
     "sentry:upload-sourcemaps": "cd apps/web && npx @sentry/cli sourcemaps upload .next/server/chunks --release versix-norma@latest",
     "prepare": "husky install || true"
   },
@@ -40,5 +41,9 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
+    "dotenv": "^17.2.3"
   }
 }
