--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prepare": "husky install || true"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
