--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,18 @@
-# =====================================================
-# VERSIX NORMA v1.0.1 - Variáveis de Ambiente
-# =====================================================
-# Copie este arquivo para .env.local e preencha os valores
-# NUNCA commite o arquivo .env.local!
+# ==========================================
+# VERSIX NORMA - Configuração de Ambiente
+# ==========================================
 
-# ===== SUPABASE =====
+# ====== SUPABASE (OBRIGATÓRIO) ======
+# URL do projeto Supabase
 SUPABASE_URL=https://xxxxx.supabase.co
+
+# Chave anônima pública do Supabase
 SUPABASE_ANON_KEY=eyJxxxxx
+
+# Chave de serviço (service role) do Supabase - NUNCA exponha no cliente
 SUPABASE_SERVICE_ROLE_KEY=eyJxxxxx
+
+# Referência do projeto Supabase
 SUPABASE_PROJECT_REF=xxxxx
 
 # ===== SUPABASE LOCAL (Docker) =====
@@ -16,17 +21,31 @@ SUPABASE_PROJECT_REF=xxxxx
 # LOCAL_SUPABASE_ANON_KEY=...
 # LOCAL_SUPABASE_SERVICE_ROLE_KEY=...
 
-# ===== INTELIGÊNCIA ARTIFICIAL =====
+# ====== IA - NORMA CHAT (OPCIONAL) ======
+# Chave API do Groq para o assistente de IA
+# ⚠️ Se não configurado, o Norma Chat funcionará em MODO FALLBACK (respostas simuladas)
 GROQ_API_KEY=gsk_xxxxx
+
+# Chave API do Hugging Face (embeddings alternativos)
 HUGGINGFACE_API_KEY=hf_xxxxx
 
-# ===== VECTOR DATABASE =====
+# ====== VECTOR DATABASE (OPCIONAL) ======
+# Qdrant para busca semântica de documentos
+# ⚠️ Se não configurado, busca será por keywords
 QDRANT_URL=https://xxxxx.qdrant.io
 QDRANT_API_KEY=xxxxx
 
 # ===== EMAIL (Resend) =====
 RESEND_API_KEY=re_xxxxx
 RESEND_FROM_EMAIL=noreply@versixnorma.com.br
+
+# ===== NOTIFICAÇÕES (OPCIONAL) =====
+# Chaves VAPID para Push Notifications
+# NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_vapid_public_key
+# VAPID_PRIVATE_KEY=your_vapid_private_key
+
+# Slack para notificações administrativas
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/your/webhook/url
 
 # ===== PAGAMENTO (Asaas - Sprint Futuro) =====
 # ASAAS_API_KEY=xxxxx
@@ -41,13 +60,40 @@ RESEND_FROM_EMAIL=noreply@versixnorma.com.br
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_ENV=development
 
+# ===== ANALYTICS (OPCIONAL) =====
+# Google Analytics ID
+# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
 # ===== VERCEL (CI/CD) =====
 # Configurados no Vercel Dashboard
 # VERCEL_TOKEN=
 # VERCEL_ORG_ID=
 # VERCEL_PROJECT_ID=
 
-# ===== SENTRY (Sprint 10 - Observabilidade) =====
+# ===== SENTRY (OPCIONAL - Observabilidade) =====
 SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
 NEXT_PUBLIC_SENTRY_DSN=https://a26d79f15679fd77106bf3c945db133d@o4510449042325504.ingest.us.sentry.io/4510613184905216
 SENTRY_AUTH_TOKEN=
+
+# ====== FEATURE FLAGS ======
+# Desabilitar PWA em desenvolvimento (acelera build)
+DISABLE_PWA=true
+
+# Suprimir avisos do Sentry
+SENTRY_SUPPRESS_GLOBAL_ERROR_HANDLER_FILE_WARNING=1
+
+# ==========================================
+# NOTAS IMPORTANTES:
+# ==========================================
+# 
+# 1. NUNCA commite este arquivo com valores reais
+# 2. Use .env.local para valores locais (ignorado pelo git)
+# 3. Configure variáveis de ambiente no Vercel/plataforma de deploy
+# 4. Variáveis NEXT_PUBLIC_* são expostas no cliente
+# 5. Outras variáveis são acessíveis apenas no servidor
+#
+# 📚 NORMA CHAT (Fallback Inteligente):
+# - ✅ Sem GROQ_API_KEY: modo fallback automático (respostas simuladas)
+# - ✅ Sem QDRANT: busca por keywords ao invés de semântica
+# - ⚙️ Para desabilitar completamente, use Feature Flag no banco
+# - 📖 Consulte apps/web/README.md para mais detalhes
