--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test:e2e": "playwright test tests/auth.spec.ts tests/app.spec.ts",
+    "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:all": "pnpm dev & sleep 10 && pnpm test:e2e",
     "test:e2e:bg": "pnpm dev & sleep 10 && pnpm test:e2e && pkill -f 'next dev'"
