chore(e2e): document demo creds for Playwright

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -18,3 +18,11 @@ NEXT_PUBLIC_SENTRY_DSN=
 # Feature Flags
 NEXT_PUBLIC_ENABLE_PWA=true
 NEXT_PUBLIC_ENABLE_NORMA_AI=true
+
+# E2E Test Credentials (fallbacks usados pelo Playwright)
+E2E_SINDICO_EMAIL=sindico@demo.versix.com.br
+E2E_SINDICO_PASSWORD=demo123
+E2E_MORADOR_EMAIL=morador@demo.versix.com.br
+E2E_MORADOR_PASSWORD=demo123
+E2E_ADMIN_EMAIL=admin@demo.versix.com.br
+E2E_ADMIN_PASSWORD=demo123
