feat: migração completa para tipos derivados + automação CI/CD
TIPOS E DERIVAÇÃO:
- Expandir derived.ts com todos os tipos estendidos (AssembleiaComJoins, OcorrenciaComJoins, QuorumInfo, ResultadoPauta)
- Adicionar CreateWebhookInput ao derived.ts
- Adicionar campo eleitos opcional ao ResultadoPauta para eleições
- Adicionar reportado_por ao OcorrenciaFilters
- Remover exports duplicados em index.ts (manter apenas derived + exports seletivos de integracoes)
- Re-exportar CreateExportacaoInput, CreateIntegracaoApiInput, CreateWebhookInput do legado

COMPONENTES E HOOKS:
- Migrar useAssembleias.ts para AssembleiaComJoins
- Migrar useOcorrencias.ts para OcorrenciaComJoins
- Migrar useVotacao.ts para tipos derivados
- Atualizar assembleias/[id]/page.tsx para usar AssembleiaComJoins
- Atualizar ocorrencias/page.tsx com filtros corretos (reportado_por)
- Atualizar AssembleiaCard para usar AssembleiaComJoins
- Atualizar VotacaoCard para usar PautaComJoins
- Atualizar ResultadoVotacao para usar ResultadoPauta (votos_abstencao, eleitos)
- Alinhar WebhookEventosSelector com enum webhook_evento do banco

AUTOMAÇÃO E CI/CD:
- Criar TIPOS_GUIA.md com documentação completa de tipos
- Adicionar CI workflow .github/workflows/type-check.yml (validação de tipos + sync de schema)
- Adicionar pre-commit hook para type-check automático
- Criar scripts/regenerate-types.sh para regeneração de tipos
- Adicionar scripts types:generate e types:check ao package.json
- Atualizar README.md com seção de Gerenciamento de Tipos

VALIDAÇÃO:
- Build passa com exit 0 (apenas ESLint warnings)
- Pre-commit hook valida tipos antes de cada commit
- CI workflow verifica sync entre migrations e database.types.ts

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:e2e": "pnpm --filter @versix/web test:e2e",
     "clean": "rm -rf node_modules apps/web/node_modules apps/web/.next",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "types:generate": "bash scripts/regenerate-types.sh",
+    "types:check": "tsc --noEmit -p packages/shared",
     "supabase:gen-types": "supabase gen types typescript --local > packages/shared/database.types.ts",
     "supabase:setup-cron": "psql -f scripts/setup-pg-cron.sql",
     "create-test-users": "node scripts/create-test-users.js",
