fix: fechar bloco de warnings no lint e falhar corretamente

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Check ESLint warnings
         run: |
           LINT_OUTPUT=$(pnpm lint 2>&1)
-          
+
           # Extract error and warning counts from the summary line (e.g., "✖ 3 problems (0 errors, 3 warnings)")
           ERROR_COUNT=$(echo "$LINT_OUTPUT" | grep -oP '\d+ errors?' | grep -oP '^\d+' || echo "0")
           WARNING_COUNT=$(echo "$LINT_OUTPUT" | grep -oP '\d+ warnings?' | grep -oP '^\d+' || echo "0")
@@ -61,6 +61,8 @@ jobs:
           if [ "$WARNING_COUNT" -gt "$MAX_WARNINGS" ]; then
             echo "Too many ESLint warnings ($WARNING_COUNT > $MAX_WARNINGS). Failing build."
             echo "Please fix warnings or update the warning limit in .warnings-config.json if necessary."
+              exit 1
+            fi
 
   # ============================================
   # DEPLOY PREVIEW (apenas para PRs)
@@ -163,7 +165,7 @@ jobs:
   deploy-production:
     name: Deploy Production
     runs-on: ubuntu-latest
-    needs: lint  # Changed from build to lint to avoid artifact dependency issues
+    needs: lint # Changed from build to lint to avoid artifact dependency issues
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment:
       name: production
